# nbody

./: CMakeLists.txt
inc/: paramgl.h
src/: render_particles.cpp
